[metadata]
name = ontoptest
version = 0.0.1
author = erez keller
author_email = erezk@cyber.org.il
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/erezklr/ontoptest.git
project_urls =
    Bug Tracker = https://github.com/erezklr/ontoptest.git
    repository = https://github.com/erezklr/ontoptest.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = multiply
packages = find:
python_requires = >=3.4

[options.packages.find]
where = multiply